<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我家PM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
 	<string name="app_developer">广州市宏门网络科技有限公司</string>
    <string name="main_pic">图片</string>
     <string name="main_diary">日记</string>
     <string name="main_activity">活动</string>
     <string name="main_video">视频</string>
     <string name="main_dialog">对话</string>
     <string name="main_zone">空间</string>
     <string name="space_init">默认空间</string>
     <string name="main_family">家人</string>
     <string name="main_set">设置</string>
     <string name="main_send">发表</string>
     <string name="signin">登录</string>
     <string name="register">注册</string>
     <string name="password">密码</string>
     <string name="password_new">输入新密码</string>
     <string name="password_confirm">确认新密码</string>
     <string name="password_auth_code">验证码</string>
     <string name="password_show">显示密码</string>
      <string name="signin_hint_user">请输入您的手机号码</string>
       <string name="dialog_msg_nonettips">检测到你没有连接网络，请问是否打开网络继续浏览？</string>
      <string name="signin_hint_pw">请输入密码</string>
    <string name="signin_hint_pw_twice">请再次确认密码</string>
    <string name="signin_set">设置</string>
     <string name="signin_set_name">请输入昵称</string>
     <string name="add">添加</string>
      <string name="invite_hint">输入姓名或者电话号码</string>
      <string name="invite_phone">电话本</string>
      <string name="invite_weixin">微信</string>
      <string name="invite_tencent">腾讯微博</string>
      <string name="invite_sina">新浪微博</string>
        <string name="invite_listview_diver">邀请他们注册Familyday</string>
         <string name="dialog_send_hint">在这里输入内容...</string>
            <string name="space_add">新建空间</string>
            <string name="family_mine">我的家人</string>
             <string name="family_invite">邀请家人</string>
              <string name="family_needconfirm">待审核</string>
              <string name="setting_point">积分</string>
               <string name="pulish_text_hint">给照片添加描述吧</string>
               <string name="pulishblog_text_hint">说说最近的心情~</string>
                 <string name="reblog_pic_hint">对转采的这张照片说两句吧</string>
                <string name="reblog_text_hint">说说你转采的文章的想法</string>
              <string name="showmore">显示更多</string>
               <string name="exit">退出</string>
               <string name="unsign">注销</string>
               <string name="notopen">内测期间，暂不开放</string>
               <string name="no_map_info">没有地图信息！</string>
               <string name="notexist">该帖子不存在或者已经被删除！</string>
               <string name="pulish_take_to">你要把它放在...</string>
                  <string name="pulish_pic_txt">发照片</string>
                  <string name="pulish_note_txt">发日记</string>
                  <string name="pulish_video_txt">发视频</string>
               <string name="pulish_activity_txt">发活动</string>
               <string name="myfamily_label">我的家人</string>
                <string name="myfamily_item_birth">生日:%1$s</string>
                 <string name="userinfo_label">名片</string>
               <string name="userinfo_detail_label">详情</string>
                <string name="time">时间:</string>
                <string name="place">地点:</string>
                <string name="introduce">介绍:</string>
                 <string name="itemfrom">转载自 %1$s</string>
               <string name="encourage_write">赶紧给家人发点评论吧</string>
                <string name="more">更多列表</string>
                <string name="reblog">转采</string>
                  <string name="publish_edit_example1">神马都是浮云~~</string>
                  <string name="publish_edit_example2">介个还真不错~</string>
                  <string name="publish_edit_example3">常回来一起吃饭！</string>
                <string name="set_relative">设置备注关系</string>
            <string name="total_number">共%1$s人</string>
              <string name="notfamily">对不起，他不是你的家人，你无法查看他的信息</string>
              <string name="nulltopic">无标题</string>
          <string name="seemap">查看地图</string>
                 <string name="name">姓名</string>
               <string name="message_preview">短信预览</string>
               <string name="error_net">网络请求出错！</string>
               <string name="findpw">找回密码</string>
               <string name="forgetpw">忘记密码？</string>
               <string name="tips_error_usernameunlegal">对不起，你输入的用户名有错误!请检查后再继续操作</string>
                 <string name="takepartin">参加了这个活动</string>
                  <string name="take_photo_null">图片仍在处理中，你需要从相册去选择！</string>
               <string name="weather_label">%1$s 【%2$s】</string>
               <string name="weather_temp">气温：%1$s</string>
               <string name="weather_condition">天气状况：%1$s</string>
               <string name="weather_tips">小提示：%1$s</string>
             <string name="family_search">搜索</string>
             <string name="search_edit_hint">输入姓名或者电话号码搜索</string>
 			<string name="btncode_label">点击获取验证码</string>
      
               <!-- Dialog -->
               <string name="dialog_msg_login">正在登陆中...</string>
                <string name="dialog_msg_check_mauth">正在验证你的账号...</string>
                <string name="dialog_msg_load">正在加载数据,请等候。。。</string>
                <string name="dialog_msg_nomoredata">没有更多数据了！</string>
                 <string name="dialog_msg_noanydata">您现在还没有任何数据！你可以开始发布第一张照片或者日记~搜索或者邀请家人</string>
                 <string name="dialog_btn_noanydata_publish">发布页面</string>
                 <string name="dialog_btn_noanydata_family">家人页面</string>
                 
                 <string name="task">有奖任务</string>
                <string name="dialog_title_comment">评论</string>
                <string name="dialog_title_relative">备注</string>
                <string name="dialog_title_sendmsg">发私信</string>
                <string name="dialog_title_weather_detail">天气详情</string>
               
                 <string name="dialog_title_setname">修改姓名</string>
                 <string name="dialog_title_setphone">修改手机号码</string>
                 <string name="dialog_title_setbirth">修改生日</string>
                 <string name="dialog_title_spacelist">空间列表</string>
                 
                <string name="dialog_button_cancel">取消</string>
                 <string name="dialog_button_close">关闭</string>
                   <string name="dialog_button_send">发布</string>
                    <string name="dialog_hint_comment">赶紧给家人发点评论吧</string>
                    <string name="dialog_hint_relative">备注一下你和%1$s的关系（例如：儿子，女儿）</string>
                    <string name="dialog_hint_sendmsg">对%1$s说两句话吧~</string>
                    
                    <string name="dialog_hint_create_space">给新建的空间起个名字</string>
                    <string name="dialog_hint_setname">换个新的昵称吧</string>
                     <string name="dialog_hint_setbirth">生日信息错了要改正吗？</string>
                    <string name="dialog_hint_setphone">换个新的联系号码</string>
                     <string name="dialog_warning_delete">你要删除这张图片吗？</string>
                     <string name="dialog_button_sure">确定</string>
                     <string name="dialog_msg_need_refresh">有新的数据更新，你需要现在更新吗？</string>
                     <string name="dialog_msg_cancel_love">你已经添加了喜欢，确定要取消吗？</string>
                      <string name="dialog_msg_uploadpic">正在上传第%1$s张图片...</string>
                      <string name="dialog_msg_publicpic">正在发布...</string>
                     <string name="dialog_msg_uoloaderror">上传出错</string>
                     <string name="dialog_msg_reblog">正在转采...</string>
                     <string name="dialog_msg_backpage1">是否回到第一页？</string>
                     
               <!-- Toast -->
               <string name="tips_login_nameinput">用户名为空</string>
               <string name="tips_login_pwinput">密码为空</string>
               <string name="tips_login_pwinput2">密码少于6位</string>
               <string name="login_fail">验证用户信息过期，请重新登录一次</string>
               <string name="tips_load_finished">数据加载完成</string>
               <string name="tips_input_less2">错误:输入少于两个字符</string>
               <string name="tips_input_less0">错误:输入不能为空</string>
               <string name="tips_input_phone_less0">手机号码输入不能为空</string>
               <string name="tips_input_pw_less0">密码输入不能为空</string>
               <string name="tips_input_name_less0">名字输入不能为空</string>
                <string name="tips_input_code_less0">验证码输入不能为空</string>
                <string name="tips_register_success">注册成功！登录用户名是您的手机号码，密码是%1$s，按下确定开始和家人分享吧</string>
                <string name="tips_send_success">发送成功</string>
                <string name="tips_msg_family">%1$s 已经是你的家人</string>
                <string name="tips_create_success">创建成功</string>
                <string name="create">创建</string>
                <string name="tips_send_fail">发送失败</string>
                <string name="tips_sending">正在发送</string>
                <string name="tips_icon_sending">正在上传头像</string>
                <string name="tips_name_sending">正在设置名字</string>
                <string name="tips_icon_sendsuccess">上传成功</string>
                <string name="tips_icon_sendfail">上传失败</string>
                 <string name="tips_msg_has_run">正在请求，请稍后</string>
                 <string name="tips_msg_finish_publish">发布成功</string>
                <string name="tips_msg_noset_pic">你还没有选择图片，请按上方的添加按钮</string>
                 <string name="tips_msg_back_send">操作完成，正在发布。。</string>
                <string name="tips_msg_noset_blog">你还没有添加任何文字</string>
                <string name="tips_msg_noset_tag">你还没有选择发布到哪个空间</string>
                <string name="tips_msg_noreblog">对不起，该类型不支持转发</string>
                 <string name="tips_msg_nodata">对不起，当前没有数据</string>
                  <string name="tips_msg_relax">对不起，请稍等10秒再尝试！</string>
                  <string name="tips_msg_agreefamily">你同意了%1$s成为你的家人！</string>
                  <string name="tips_msg_cancelfamily">你忽略了%1$s成为你的家人！</string>
                  <string name="tips_msg_send_requestadd">发送申请成功，请等候对方回复！</string>
                <string name="tips_msg_loading">努力加载中</string>
                 <string name="tips_msg_changephone">如果需要修改手机号码，请查看下方的关于联系我们</string>
                 <string name="tips_msg_nophone">对方还没有填写电话号码</string>
               <string name="tips_msg_needwrite">请填写相关的信息</string>
                <string name="tips_msg_invite_sucess">注册成功，现在发信息告诉你的家人吧！</string>
                  <string name="tips_msg_invite">%1$s,我在familyday.com.cn帮你注册了，账号是你的 手机号码，密码是***，我们在这里团聚!（%2$s）</string>
                   <string name="tips_msg_download">已经下载到目录\familydayVerpm\目录下</string>
                   <string name="tips_msg_download_error">等待加载完成</string>
                  <string name="tips_msg_phone_error">对方已经是familyday的用户或者手机号码填错！</string>
                <string name="tips_msg_noreblogself">这是自己发布的哦~不能转采自己发布的帖子</string>
                <string name="tips_msg_waitforload">请等待加载完成</string>
                <string name="tips_msg_finish_load">数据加载完成</string>
                <string name="tips_msg_pw_nosame">两次密码输入不一致，请检查</string>
                  <string name="tips_msg_pw_needauth">请输入验证码</string>
                <dimen name="galley_high">95dp</dimen>
</resources>