<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >
     	<EditText
       	    android:layout_width="fill_parent"
       	    android:layout_height="130dp"
       	    android:textColor="#7E7E7E"
       	    android:textSize="26sp"
       	    android:textStyle="bold"
       	    android:paddingTop="10dp"
       	    android:paddingLeft="10dp"
       	    android:textColorHint="#e0e0e0"
       	    android:layout_below="@id/publish_img_layout"
       	    android:hint="@string/pulish_text_hint"
       	    android:id="@+id/publish_edit_dialog_text"
       	    android:gravity="top"
       	    android:background="@drawable/input_block"
       	    />

	 	<RadioGroup
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content" 
	 	    android:layout_below="@id/publish_edit_dialog_text"
	 	    android:id="@+id/publish_edit_dialog_select"
	 	    >
	 	    <RadioButton 
	 	        android:textSize="22sp"
	 	    	android:textColor="#7E7E7E"
	 	    	android:text="@string/publish_edit_example1"
	 	    	android:id="@+id/publish_edit_1"
	 	        />
	 	    <RadioButton 
	 	        android:textSize="22sp"
	 	    	android:textColor="#7E7E7E"
	 	    	android:text="@string/publish_edit_example2"
	 	    	android:id="@+id/publish_edit_2"
	 	        />
	 	    <RadioButton 
	 	        android:textSize="22sp"
	 	    	android:textColor="#7E7E7E"
	 	    	android:text="@string/publish_edit_example3"
	 	    	android:id="@+id/publish_edit_3"
	 	        />
	 	    </RadioGroup>
</RelativeLayout>