<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="200dp"
  android:background="@null">
     <RelativeLayout 
         	android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dp"
		    android:layout_marginLeft="10dp"
		    android:layout_centerInParent="true"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:id="@+id/main_weather_label"
		    android:visibility="visible"
        >
        
        <TextView
           android:textSize="23sp"
	     	android:paddingLeft="0dp"
	     	android:paddingRight="5dp"
	     	android:paddingTop="5dp"
	     	android:paddingBottom="5dp"
	     	android:textColor="#FFFFFF"
	     	android:text="@string/weather_label"
	     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:id="@+id/main_weather_label_top"
     	android:layout_centerHorizontal="true"
            />
        <TextView
           	android:textSize="23sp"
	     	android:paddingLeft="0dp"
	     	android:paddingRight="5dp"
	     	android:paddingTop="5dp"
	     	android:paddingBottom="5dp"
	     	android:textColor="#FFFFFF"
	     	android:text="@string/weather_temp"
	     	android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:layout_below="@id/main_weather_label_top"
     		android:id="@+id/main_weather_label_temp"
            />
         <TextView
           	android:textSize="23sp"
	     	android:paddingLeft="0dp"
	     	android:paddingRight="5dp"
	     	android:paddingTop="5dp"
	     	android:paddingBottom="5dp"
	     	android:textColor="#FFFFFF"
	     	android:text="@string/weather_condition"
	     	android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:layout_below="@id/main_weather_label_temp"
     		android:id="@+id/main_weather_label_condition"
            />
           <TextView
           	android:textSize="23sp"
	     	android:paddingLeft="0dp"
	     	android:paddingRight="5dp"
	     	android:paddingTop="5dp"
	     	android:paddingBottom="5dp"
	     	android:textColor="#FFFFFF"
	     	android:text="@string/weather_tips"
	     	android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:layout_below="@id/main_weather_label_condition"
     		android:id="@+id/main_weather_label_tips"
            />
        </RelativeLayout>
</LinearLayout>
