<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF">
    <Button
        android:id="@+id/register_topLabel"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:background="@drawable/signin_gray"
        android:text="@string/register"
        android:textSize="25sp"
        android:gravity="bottom|center_horizontal"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        />
       <Button
        android:layout_width="49dp"
        android:layout_height="25dp"
        android:background="@drawable/signin_logo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="14dp"
        />
       <Button
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@drawable/line"
        android:layout_toRightOf="@id/register_topLabel"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@id/register_topLabel"
        />
       <EditText
        android:id="@+id/register_etUser"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_back"
        android:layout_below="@id/register_topLabel"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:textColor="#6D6D6D"
        android:padding="10dp"
        android:hint="@string/signin_hint_user"
        android:inputType="number"
        />
       <EditText
        android:id="@+id/register_etPw"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_back"
        android:layout_below="@id/register_etUser"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="#6D6D6D"
        android:padding="10dp"
        android:hint="@string/signin_hint_pw"
        />
       <Button 
            android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/green_bg"
        android:layout_below="@id/register_etPw"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:id="@+id/register_btngetcode"
        android:text="@string/btncode_label"
         android:textColor="#FFFFFF"
           />
        <EditText
        android:id="@+id/register_etCode"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_back"
        android:layout_below="@id/register_etPw"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="#6D6D6D"
        android:padding="10dp"
        android:layout_toRightOf="@id/register_btngetcode"
        android:hint="@string/password_auth_code"
        />
       
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:background="@drawable/edit_back"
             >
             <Button 
                 android:id="@+id/register_bottom_center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:visibility="invisible"
                 />
             <ImageButton 
                  android:id="@+id/register_back"
                  android:layout_width="100dp"
             	  android:layout_height="fill_parent"
             	  android:gravity="center"
             	  android:src="@drawable/back"
             	  android:background="@null"
             	  android:layout_toLeftOf="@id/register_bottom_center"
                 />
              <ImageButton 
                  android:id="@+id/register_confirm"
                  android:layout_width="100dp"
             	  android:layout_height="fill_parent"
             	  android:gravity="center"
             	  android:src="@drawable/confirm"
             	  android:background="@null"
             	  android:layout_toRightOf="@id/register_bottom_center"
                 />
             </RelativeLayout>
</RelativeLayout>