<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF">
    <Button
        android:id="@+id/findpw_topLabel"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:background="@drawable/signin_gray"
        android:text="@string/password"
        android:textSize="27sp"
        android:gravity="bottom|center_horizontal"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:focusableInTouchMode="true"
        />
       <Button
        android:layout_width="49dp"
        android:layout_height="25dp"
        android:background="@drawable/signin_logo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="14dp"
        />
       <Button
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@drawable/line"
        android:layout_toRightOf="@id/findpw_topLabel"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@id/findpw_topLabel"
        />
       <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:background="@drawable/edit_back"
             android:id="@+id/findpw_bottom"
             >
             <ImageButton 
                  android:id="@+id/findpw_back"
                  android:layout_width="100dp"
             	  android:layout_height="fill_parent"
             	  android:layout_centerInParent="true"
             	  android:src="@drawable/back"
             	  android:background="@null"
                 />
             </RelativeLayout>
       
     <RelativeLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
          android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="20dp"
         android:layout_below="@id/findpw_topLabel"
         >
         <EditText
        android:id="@+id/findpw_etNew"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="22sp"
        android:textColor="#7E7E7E"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:hint="@string/password_new"
        android:textColorHint="#6D6D6D"
        android:background="@drawable/edit_back"
        android:password="true"
        />
          <EditText
        android:id="@+id/findpw_etpw_2"
        android:layout_below="@id/findpw_etNew"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="22sp"
        android:textColor="#7E7E7E"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password_confirm"
        android:textColorHint="#6D6D6D"
        android:background="@drawable/edit_back"
        android:password="true"
        />
           <CheckBox
        android:id="@+id/findpw_showpw"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/password_show"
        android:checked="false"
        android:textColor="#000000"
        android:layout_below="@id/findpw_etpw_2"
        android:layout_alignRight="@id/findpw_etpw_2"
        android:layout_marginTop="10dp"
        />
             <EditText
        android:id="@+id/findpw_auth_code"
        android:layout_below="@id/findpw_showpw"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:textSize="22sp"
        android:textColor="#7E7E7E"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:singleLine="true"
        android:hint="@string/password_auth_code"
        android:textColorHint="#6D6D6D"
        android:background="@drawable/edit_back"
        android:layout_marginTop="10dp"
        /> 
         <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/green_confirm"
         android:layout_below="@id/findpw_showpw"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
        android:id="@+id/findpw_btnchangepw"
         />
     </RelativeLayout>
</RelativeLayout>