<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF">
    <Button
        android:id="@+id/invite_topLabel"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:background="@drawable/signin_gray"
        android:text="@string/add"
        android:textSize="25sp"
        android:gravity="bottom|center_horizontal"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:focusableInTouchMode="true"
        />
       <Button
        android:layout_width="49dp"
        android:layout_height="25dp"
        android:background="@drawable/signin_logo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="14dp"
        />
       <Button
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@drawable/line"
        android:layout_toRightOf="@id/invite_topLabel"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@id/invite_topLabel"
        />
       <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:background="@drawable/edit_back"
             android:id="@+id/invite_bottom"
             >
             <ImageButton 
                  android:id="@+id/invite_back"
                  android:layout_width="100dp"
             	  android:layout_height="fill_parent"
             	  android:layout_centerInParent="true"
             	  android:src="@drawable/back"
             	  android:background="@null"
                 />
              <ImageButton 
                  android:id="@+id/invite_ignore"
                  android:layout_width="100dp"
             	  android:layout_height="fill_parent"
             	  android:layout_centerInParent="true"
             	  android:src="@drawable/ignore"
             	  android:background="@null"
             	  android:visibility="invisible"
                 />
             </RelativeLayout>
       <ScrollView 
           android:layout_below="@id/invite_topLabel"
           android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_above="@id/invite_bottom"
           >
       <RelativeLayout
           android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
           >
        <ImageView 
            android:id="@+id/invite_btnTelAdd"
            android:layout_width="60dp"
        	android:layout_height="60dp"
        	 android:src="@drawable/green_add"
        	 android:layout_marginRight="45dp"
        	 android:layout_alignParentRight="true"
        	 android:layout_marginTop="30dp"
        	 
           />
        
       <EditText
        android:id="@+id/invite_etName"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_back"
        android:layout_below="@id/invite_topLabel"
        android:layout_marginLeft="45dp"
        android:layout_toLeftOf="@id/invite_btnTelAdd"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:textColor="#6D6D6D"
        android:padding="10dp"
        android:hint="@string/name"
        />
      
       <EditText
        android:id="@+id/invite_etTel"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_back"
        android:layout_below="@id/invite_etName"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="#6D6D6D"
        android:padding="10dp"
        android:hint="@string/signin_hint_user"
        android:inputType="number"
        />
       	<TextView 
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:textSize="28sp"
       	    android:textColor="#8F8F8F"
       	    android:textStyle="bold"
       	    android:layout_below="@id/invite_etTel"
       	    android:text="@string/message_preview"
       	    android:layout_marginTop="10dp"
       	    android:layout_alignLeft="@id/invite_etTel"
       	    android:layout_alignRight="@id/invite_etTel"
       	    android:id="@+id/invite_msglabel"
       	    />
       	
       	
       <EditText
        android:id="@+id/invite_etmsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/messge_box"
        android:layout_below="@id/invite_msglabel"
        android:layout_alignLeft="@id/invite_etTel"
        android:layout_alignRight="@id/invite_etTel"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:textColor="#6D6D6D"
        android:padding="6dp"
        android:gravity="left|top"
        android:hint="@string/invite_listview_diver"
        />
       
       <Button 
           android:id="@+id/invite_btnconfirm"
            android:layout_alignLeft="@id/invite_etTel"
        android:layout_alignRight="@id/invite_etTel"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_invite"
        android:layout_below="@id/invite_etmsg"
        android:layout_marginTop="5dp"
           />
       </RelativeLayout>
       </ScrollView>
         
</RelativeLayout>